@@ -1,5 +1,7 @@
 All notable changes to this project will be documented in this file.
 
+### UNRELEASED
+  - add CLI support to manage accounts (list / modify / add accounts)
 ### 1.4.3 - 10 mar '22
   - fix [#140](https://framagit.org/les/gancio/-/issues/140) - Invalid date
   - fix [#141](https://framagit.org/les/gancio/-/issues/141) - Cannot change logo
